--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
             <div id="detailPage">
                 <div id="resultDiv"></div>
+				<div id="fejl"></div>
                 <div>
                     <input type="text" id="messageInput" value="Hello"/>
                     <button id="sendButton">Send</button>
